--- a/Proyecto0/src/main/webapp/custom.css
+++ b/Proyecto0/src/main/webapp/custom.css
@@ -175,3 +175,10 @@
 
 	margin-bottom: 30px;
 }
+
+ .borde {
+        border: 2px solid #ccc;
+        padding: 20px;
+        border-radius: 5px;
+        margin-top: 20px;
+    }
